Bug 399141 - Release upgrades are not shown in Updates widget
Summary: Release upgrades are not shown in Updates widget
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.13.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-27 12:51 UTC by Victor Perevertkin
Modified: 2018-10-15 18:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
Empty updates widget and release upgrade icon (47.02 KB, image/png)
2018-09-27 12:51 UTC, Victor Perevertkin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Perevertkin 2018-09-27 12:51:46 UTC
Created attachment 115262 [details]
Empty updates widget and release upgrade icon

SUMMARY
Updates widget shows that "system is up to date" while there is a distro release upgrade available (which is indicated by completely different icon). Such inconsistent behaviour can be confusing for users

EXPECTED RESULT
All updates including distribution release ones are shown in Updates widget

SOFTWARE VERSIONS
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50
Qt Version: 5.11.1
(Latest KDE Neon User Edition 16.04)
Comment 1 Nate Graham 2018-09-27 14:28:07 UTC
I agree, this would make sense and be nice. We should try to centralize all of this in Discover's update plasmoid as much as possible.
Comment 2 Kai Uwe Broulik 2018-09-27 14:33:36 UTC
Doesn't Discover have multiple "updater backends" that are queried for updates? Aren't they even plugins? So can't in theory neon updater install a Discover plugin for that to integrate here? Just something I noticed while fixing things in there. It only knows "security" and "normal" updates, no "distro upgrades", but something to keep in mind maybe. :)
Comment 3 Aleix Pol 2018-09-28 01:24:35 UTC
This is already the case, distributions aren't make use of it.

The PackageKitNotifier backend for the plasmoid does check for new releases. It's not implemented on apt backend, we looked into it for neon with Harald and they decided to go in a different direction.

We could have some ad-hoc code for Neon or any other distro there, that's true.
Comment 4 Nate Graham 2018-09-28 20:17:16 UTC
(In reply to Aleix Pol from comment #3)
> The PackageKitNotifier backend for the plasmoid does check for new releases.
> It's not implemented on apt backend, we looked into it for neon with Harald
> and they decided to go in a different direction.

That's a shame. Can we re-visit that in some venue? It's sort of odd to not have all upgrade notifications in the same plasmoid.
Comment 5 Aleix Pol 2018-10-15 15:51:55 UTC
Git commit e81d0d1bca83a61fd4c296939e9378311398eec2 by Aleix Pol.
Committed on 15/10/2018 at 15:49.
Pushed by apol into branch 'master'.

notifier: include distro upgrades in the plasmoid

M  +1    -0    notifier/DiscoverNotifier.h
M  +19   -0    notifier/plasmoid/contents/ui/Full.qml

https://commits.kde.org/discover/e81d0d1bca83a61fd4c296939e9378311398eec2