notifier: include distro upgrades in the plasmoid

BUG: 399141